--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -404,10 +404,15 @@ service mdm_helper /system/bin/mdm_helper
     onrestart setprop ro.service.mdm_helper_restarted "true"
     disabled
 
+service qrngd /system/bin/qrngd -f
+    class main
+    user root
+    group root
+
 service qseecomd /system/bin/qseecomd
-   class late_start
-   user system
-   group system
+    class late_start
+    user system
+    group system
 
 service efsrestorecon /system/bin/restorecon -R /efs
     class late_start
