--- a/prebuilt/etc/gps.conf
+++ b/prebuilt/etc/gps.conf
@@ -2,6 +2,7 @@
 XTRA_SERVER_1=http://xtra1.gpsonextra.net/xtra2.bin
 XTRA_SERVER_2=http://xtra2.gpsonextra.net/xtra2.bin
 XTRA_SERVER_3=http://xtra3.gpsonextra.net/xtra2.bin
+XTRA_VERSION_CHECK=0
 ERR_ESTIMATE=0
 NTP_SERVER=time.gpsonextra.net
 DEBUG_LEVEL=2
