gps.conf: fix typo

--- a/prebuilt/etc/gps.conf
+++ b/prebuilt/etc/gps.conf
@@ -8,6 +8,6 @@ CAPABILITIES=0x37
 DEBUG_LEVEL=2
 ERR_ESTIMATE=0
 INTERMEDIATE_POS=0
-LPP_PROFILE = 0 3 Sensor R&D : This will not be injected to MODEM
+LPP_PROFILE=3
 NMEA_PROVIDER=1
 SUPL_VER=0x10000
