--- a/rootdir/init.jfltetmo.rc
+++ b/rootdir/init.jfltetmo.rc
@@ -609,10 +609,6 @@ service bugreport /system/bin/dumpstate -d -p -B \
     oneshot
     keycodes 114 115 116
 
-# SISO-ANDR-PERF :: START Changing scheduler to row after boot complete
-on property:sys.boot_completed=1
-    write /sys/block/mmcblk0/queue/scheduler row
-
 # Insthk
 service insthk /system/bin/insthk
     class main
@@ -927,7 +923,6 @@ on property:persist.sys.ssr.restart_level=3
     write /sys/module/subsystem_restart/parameters/restart_level 3
 
 on property:sys.boot_completed=1
-    write /sys/block/mmcblk0/queue/scheduler row
     write /sys/module/rpm_resources/enable_low_power/L2_cache 1
     write /sys/module/rpm_resources/enable_low_power/pxo 1
     write /sys/module/rpm_resources/enable_low_power/vdd_dig 1
@@ -1045,7 +1040,6 @@ on property:sys.perf.profile=0
     write /sys/devices/system/cpu/cpu1/online 0
     write /sys/devices/system/cpu/cpu2/online 0
     write /sys/devices/system/cpu/cpu3/online 0
-    write /sys/block/mmcblk0/queue/scheduler noop
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor conservative
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor conservative
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor conservative
@@ -1071,23 +1065,22 @@ on property:sys.perf.profile=1
     write /sys/devices/system/cpu/cpu1/online 1
     write /sys/devices/system/cpu/cpu2/online 0
     write /sys/devices/system/cpu/cpu3/online 0
-    write /sys/block/mmcblk0/queue/scheduler noop
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
-    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor interactive
-    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor interactive
-    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor interactive
-    write /sys/devices/system/cpu/cpufreq/interactive/above_hispeed_delay 30000
-    write /sys/devices/system/cpu/cpufreq/interactive/go_hispeed_load 90
-    write /sys/devices/system/cpu/cpufreq/interactive/hispeed_freq 1134000
-    write /sys/devices/system/cpu/cpufreq/interactive/io_is_busy 1
-    write /sys/devices/system/cpu/cpufreq/interactive/min_sample_time 90000
-    write /sys/devices/system/cpu/cpufreq/interactive/sampling_down_factor 2
-    write /sys/devices/system/cpu/cpufreq/interactive/sync_freq 810000
-    write /sys/devices/system/cpu/cpufreq/interactive/target_loads 90
-    write /sys/devices/system/cpu/cpufreq/interactive/timer_rate 30000
-    write /sys/devices/system/cpu/cpufreq/interactive/timer_slack 80000
-    write /sys/devices/system/cpu/cpufreq/interactive/up_threshold_any_cpu_freq 810000
-    write /sys/devices/system/cpu/cpufreq/interactive/up_threshold_any_cpu_load 70
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor intelliactive
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor intelliactive
+    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor intelliactive
+    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor intelliactive
+    write /sys/devices/system/cpu/cpufreq/intelliactive/above_hispeed_delay 30000
+    write /sys/devices/system/cpu/cpufreq/intelliactive/go_hispeed_load 90
+    write /sys/devices/system/cpu/cpufreq/intelliactive/hispeed_freq 1134000
+    write /sys/devices/system/cpu/cpufreq/intelliactive/io_is_busy 1
+    write /sys/devices/system/cpu/cpufreq/intelliactive/min_sample_time 90000
+    write /sys/devices/system/cpu/cpufreq/intelliactive/sampling_down_factor 2
+    write /sys/devices/system/cpu/cpufreq/intelliactive/sync_freq 810000
+    write /sys/devices/system/cpu/cpufreq/intelliactive/target_loads 90
+    write /sys/devices/system/cpu/cpufreq/intelliactive/timer_rate 30000
+    write /sys/devices/system/cpu/cpufreq/intelliactive/timer_slack 80000
+    write /sys/devices/system/cpu/cpufreq/intelliactive/up_threshold_any_cpu_freq 810000
+    write /sys/devices/system/cpu/cpufreq/intelliactive/up_threshold_any_cpu_load 70
     write /sys/devices/platform/kgsl-3d0.0/kgsl/kgsl-3d0/gpuclk 128000000
     write /sys/devices/platform/kgsl-3d0.0/kgsl/kgsl-3d0/max_gpuclk 320000000
     write /sys/devices/platform/kgsl-3d0.0/kgsl/kgsl-3d0/pwrscale/trustzone/governor ondemand
@@ -1101,7 +1094,6 @@ on property:sys.perf.profile=2
     write /sys/devices/system/cpu/cpu1/online 1
     write /sys/devices/system/cpu/cpu2/online 1
     write /sys/devices/system/cpu/cpu3/online 1
-    write /sys/block/mmcblk0/queue/scheduler noop
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor performance
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor performance
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor performance
