--- a/rootdir/init.jfltetmo.rc
+++ b/rootdir/init.jfltetmo.rc
@@ -832,6 +832,7 @@ service fuse_usbdisk /system/bin/sdcard -u 1023 -g 1023 /mnt/media_rw/usbdisk /s
 
 service charger /charger
     class charger
+    seclabel u:r:healthd:s0
 
 on property:sys.qseecomd.enable=true
     start insthk
