--- a/rootdir/init.jfltetmo.rc
+++ b/rootdir/init.jfltetmo.rc
@@ -1031,6 +1031,12 @@ on property:sys.boot_completed=1
     write /sys/module/cpu_boost/parameters/sync_threshold 1242000
     write /sys/module/cpu_boost/parameters/input_boost_freq 1134000
 
+    # Set up KSM
+    write /sys/kernel/mm/ksm/deferred_timer 1
+    write /sys/kernel/mm/ksm/pages_to_scan 100
+    write /sys/kernel/mm/ksm/sleep_millisecs 500
+    write /sys/kernel/mm/ksm/run 1
+
     # Set performance profile
     setprop sys.perf.profile 1
 
