--- a/recovery/root/init.recovery.jfltetmo.rc
+++ b/recovery/root/init.recovery.jfltetmo.rc
@@ -1,3 +1,7 @@
+on init
+    mkdir /storage
+    symlink /sdcard /storage/sdcard0
+
 on boot
     # CPU
     write /sys/module/rpm_resources/enable_low_power/L2_cache 1
@@ -9,7 +13,6 @@ on boot
     write /sys/module/pm_8x60/modes/cpu2/power_collapse/suspend_enabled 1
     write /sys/module/pm_8x60/modes/cpu3/power_collapse/suspend_enabled 1
     write /sys/module/pm_8x60/modes/cpu0/power_collapse/idle_enabled 1
-
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 384000
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_min_freq 384000
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_min_freq 384000
@@ -17,7 +20,6 @@ on boot
     write /sys/devices/system/cpu/cpu1/online 0
     write /sys/devices/system/cpu/cpu2/online 0
     write /sys/devices/system/cpu/cpu3/online 0
-    setprop recovery.perf.mode 0
 
     # USB
     write /sys/class/android_usb/android0/enable 0
@@ -27,6 +29,7 @@ on boot
     setprop usb.vendor 04E8
     setprop usb.product.adb 685B
     setprop usb.product.mtpadb 6860
+    setprop recovery.perf.mode 0
 
 on property:recovery.perf.mode=0
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor ondemand
