--- a/rootdir/init.jfltetmo.power.rc
+++ b/rootdir/init.jfltetmo.power.rc
@@ -245,5 +245,8 @@ on property:sys.boot_completed=1
     write /sys/module/cpu_boost/parameters/sync_threshold 1242000
     write /sys/module/cpu_boost/parameters/input_boost_freq 1134000
 
+    # Set iosched
+    setprop sys.io.scheduler bfq
+
     # Set performance profile
     setprop sys.perf.profile 1
